@@ -1,3 +1,9 @@
+2004-07-02  Mikael Hallendal  <micke@imendio.com>
+
+	* src/dh-base.c: (base_init_books):
+	- Read books from home directory first to always make sure that user 
+	  installed documentation is shown if there are duplicates.
+
 2004-05-18  Mikael Hallendal  <micke@imendio.com>
 
 	* autogen.sh: Use automake 1.7
